--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon --env-file=.env app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --env-file=.env sever.js",
+    "dev": "nodemon --env-file=.env server.js",
+    "test": "jest --detectOpenHandles --forceExit --coverage"
   },
   "author": "Aviv Isovitz",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1"
   }
